# Start-Agent

./: .env.example  .gitignore  ENVIRONMENT.md  LICENSE  README.md  pyproject.toml  requirements.txt
.reasonix/: desktop-topic-created-at.json  desktop-topic-title-sources.json  desktop-topic-titles.json
start_agent/: __init__.py  version.py
start_agent/agents/: __init__.py  function_call_agent.py  plan_solve_agent.py  react_agent.py  reflection_agent.py  simple_agent.py  tool_aware_agent.py
start_agent/context/: README.md  __init__.py  builder.py
start_agent/core/: __init__.py  agent.py  config.py  database_config.py  exceptions.py  llm.py
start_agent/evaluation/: README.md  __init__.py
start_agent/evaluation/benchmarks/: __init__.py
start_agent/evaluation/benchmarks/bfcl/: __init__.py  bfcl_integration.py  evaluator.py
start_agent/evaluation/benchmarks/data_generation/: __init__.py  dataset.py  llm_judge.py  win_rate.py
start_agent/evaluation/benchmarks/gaia/: __init__.py  dataset.py  evaluator.py
start_agent/memory/: README.md  __init__.py  base.py
start_agent/memory/rag/: pipeline.py
start_agent/memory/storage/: __init__.py  neo4j_store.py  qdrant_store.py
start_agent/memory/types/: __init__.py  episodic.py  perceptual.py  working.py
start_agent/protocols/: README.md  __init__.py
start_agent/protocols/a2a/: __init__.py  implementation.py
start_agent/protocols/anp/: __init__.py
start_agent/protocols/mcp/: client.py  server.py
start_agent/rl/: README.md  __init__.py  utils.py
start_agent/tools/: __init__.py  async_executor.py  chain.py  registry.py
start_agent/tools/builtin/: __init__.py  bfcl_evaluation_tool.py  gaia_evaluation_tool.py  llm_judge_tool.py  mcp_wrapper_tool.py  memory_tool.py  protocol_tools.py  rag_tool.py  rl_training_tool.py  search_tool.py  win_rate_tool.py
start_agent/utils/: logging.py
tests/: test_start_agent_demo.py
